--- a/_Lib/Views/Sys/role.html
+++ b/_Lib/Views/Sys/role.html
@@ -49,7 +49,7 @@
                     <li class="user-details cyan darken-2">
                         <div class="row">
                             <div class="col col s4 m4 l4">
-                                <img src="/content/images/avatar.jpg" alt="" class="circle responsive-img valign profile-image">
+                                <i class="mdi-action-account-circle medium"></i>
                             </div>
                             <div class="col col s8 m8 l8">
                                 <ul id="profile-dropdown" class="dropdown-content">
