修改form初始化方法

--- a/QrF.Sqlite.Nancy/Views/Customer/info.html
+++ b/QrF.Sqlite.Nancy/Views/Customer/info.html
@@ -186,7 +186,7 @@
                                                                 <textarea id="Remark" name="Remark" class="materialize-textarea"></textarea>
                                                             </div>
                                                             <div class="input-field col s12">
-                                                                <button class="btn waves-effect waves-light right submit" type="submit" name="action">
+                                                                <button class="btn waves-effect waves-light right submit" type="submit" id="btn-save" name="action">
                                                                     <i class="mdi-content-send"></i>
                                                                     提交
                                                                 </button>
