--- a/QrF.Sqlite.Nancy/Views/Customer/info.html
+++ b/QrF.Sqlite.Nancy/Views/Customer/info.html
@@ -130,60 +130,60 @@
                                                 <h4>编辑客户</h4>
                                                 <div class="card-panel">
                                                     <form class="formValidate" id="formValidate">
-                                                        <input type="hidden" id="ID" name="ID" value="0" />
+                                                        <input type="hidden" id="ID" name="ID" class="form-field" data-type="number" data-default-value="0" value="0" />
                                                         <div class="row">
                                                             <div class="input-field col s6">
                                                                 <label for="BuyTime">购买日期 *</label>
-                                                                <input id="BuyTime" name="BuyTime" type="text" data-error=".errorTxt1">
+                                                                <input id="BuyTime" name="BuyTime" class="form-field" data-type="date" type="text" data-default-value="" value="" data-error=".errorTxt1">
                                                                 <div class="errorTxt1"></div>
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="Name">客户姓名 *</label>
-                                                                <input id="Name" name="Name" type="text" data-error=".errorTxt2">
+                                                                <input id="Name" name="Name" class="form-field" data-type="text" type="text" data-default-value="" value="" data-error=".errorTxt2">
                                                                 <div class="errorTxt2"></div>
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="Days">购买天数 *</label>
-                                                                <input id="Days" name="Days" type="number" data-error=".errorTxt3">
+                                                                <input id="Days" name="Days" class="form-field" data-type="number" type="number" data-default-value="0" value="0" data-error=".errorTxt3">
                                                                 <div class="errorTxt3"></div>
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="Money">金额 *</label>
-                                                                <input id="Money" name="Money" type="number" data-error=".errorTxt4">
+                                                                <input id="Money" name="Money" class="form-field" data-type="number" type="number" data-default-value="0" value="0" data-error=".errorTxt4">
                                                                 <div class="errorTxt4"></div>
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="Product">产品名称 *</label>
-                                                                <input id="Product" name="Product" type="text" data-error=".errorTxt5">
+                                                                <input id="Product" name="Product" class="form-field" data-type="text" type="text" data-default-value="" value="" data-error=".errorTxt5">
                                                                 <div class="errorTxt5"></div>
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="Card">卡号</label>
-                                                                <input id="Card" name="Card" type="text">
+                                                                <input id="Card" name="Card" class="form-field" data-type="text" type="text" data-default-value="" value="" >
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="Contact">联系方式</label>
-                                                                <input id="Contact" name="Contact" type="text">
+                                                                <input id="Contact" name="Contact" class="form-field" data-type="text" type="text" data-default-value="" value="" >
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="YieldRate">收益率</label>
-                                                                <input id="YieldRate" name="YieldRate" type="text">
+                                                                <input id="YieldRate" name="YieldRate" class="form-field" data-type="text" type="text" data-default-value="" value="" >
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="Expected">预期收益</label>
-                                                                <input id="Expected" name="Expected" type="text">
+                                                                <input id="Expected" name="Expected" class="form-field" data-type="text" type="text" data-default-value="" value="" >
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="CarrayDate">起息日期</label>
-                                                                <input id="CarrayDate" name="CarrayDate" type="text">
+                                                                <input id="CarrayDate" name="CarrayDate" class="form-field" data-type="date" type="text" data-default-value="" value="" >
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="DueDate">到期日期</label>
-                                                                <input id="DueDate" name="DueDate" type="text">
+                                                                <input id="DueDate" name="DueDate" class="form-field" data-type="date" type="text" data-default-value="" value="" >
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="Remark">备注说明</label>
-                                                                <textarea id="Remark" name="Remark" class="materialize-textarea"></textarea>
+                                                                <textarea id="Remark" name="Remark" class="materialize-textarea form-field" data-type="text" data-default-value=""></textarea>
                                                             </div>
                                                             <div class="input-field col s12">
                                                                 <button class="btn waves-effect waves-light right submit" type="submit" id="btn-save" name="action">
