--- a/QrF.Sqlite.Nancy/Views/Sys/user.html
+++ b/QrF.Sqlite.Nancy/Views/Sys/user.html
@@ -131,6 +131,7 @@
                                                 <div class="card-panel">
                                                     <form class="formValidate" id="formValidate">
                                                         <input type="hidden" id="ID" name="ID" value="0" />
+                                                        <input type="hidden" id="CreateTime" name="CreateTime" value="" />
                                                         <input type="hidden" name="RoleIds" id="RoleIds" />
                                                         <input type="hidden" name="Password" id="Password" />
                                                         <div class="row">
