--- a/_Lib/Views/Sys/menu.html
+++ b/_Lib/Views/Sys/menu.html
@@ -135,6 +135,7 @@
                                                 <div class="card-panel">
                                                     <form class="formValidate" id="formValidate" method="post" action="/sys/menuEdit">
                                                         <input type="hidden" id="ID" name="ID" value="0" />
+                                                        <input type="hidden" id="CreateTime" name="CreateTime" value="" />
                                                         <div class="row">
                                                             <div class="input-field col s6 l4">
                                                                 <label for="Name">菜单名称 *</label>
