--- a/_Lib/Views/Sys/role.html
+++ b/_Lib/Views/Sys/role.html
@@ -131,6 +131,7 @@
                                                 <div class="card-panel">
                                                     <form class="formValidate" id="formValidate">
                                                         <input type="hidden" id="ID" name="ID" value="0" />
+                                                        <input type="hidden" id="CreateTime" name="CreateTime" value="" />
                                                         <input type="hidden" name="BusinessPermissionString" id="BusinessPermissionString" />
                                                         <div class="row">
                                                             <div class="input-field col s6">
