--- a/_Lib/Views/Customer/info.html
+++ b/_Lib/Views/Customer/info.html
@@ -113,7 +113,7 @@
                                         <button class="btn cyan waves-effect waves-light left query_btn" type="button" name="action">
                                             <i class="mdi-action-search"></i> 查询
                                         </button>
-                                        <a class="btn teal waves-effect waves-light right edit_btn" href="/customer/infoEdit?id=-1">
+                                        <a class="btn teal waves-effect waves-light right edit_btn" href="/customer/infoGet?id=-1">
                                             <i class="mdi-content-add"></i> 新增
                                         </a>
                                     </div>
