--- a/_Lib/Views/Sys/menu.html
+++ b/_Lib/Views/Sys/menu.html
@@ -117,7 +117,7 @@
                                         <button class="btn cyan waves-effect waves-light left query_btn" type="button" name="action">
                                             <i class="mdi-action-search"></i> 查询
                                         </button>
-                                        <a class="btn teal waves-effect waves-light right modal-trigger" href="#modalEdit">
+                                        <a class="btn teal waves-effect waves-light right edit_btn" href="/sys/menuGet?id=-1">
                                             <i class="mdi-content-add"></i> 新增
                                         </a>
                                     </div>
@@ -203,7 +203,7 @@
     <script src="../../content/js/lib/sea.js"></script>
     <script src="../../content/js/common.js"></script>
     <script>
-        var menu = seajs.use('js/app/menu.js');
+        seajs.use('js/app/menu.js');
     </script>
 </body>
 </html>
