修改角色编辑界面

--- a/QrF.Sqlite.Nancy/Views/Account/login.html
+++ b/QrF.Sqlite.Nancy/Views/Account/login.html
@@ -11,7 +11,7 @@
     <meta name="author" content="" >
     <title>QrF | 系统登录</title>
     <!-- Favicons-->
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <!-- CORE CSS-->
     <link href="../../content/css/materialize.min.css" rel="stylesheet" />
     <!-- Custome CSS-->
