--- a/_Lib/Views/Sys/menu.html
+++ b/_Lib/Views/Sys/menu.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <title>QrF | 菜单管理</title>
     <!-- Favicons-->
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <!-- CORE CSS-->
     <link href="../../content/css/materialize.min.css" rel="stylesheet" />
     <link href="../../content/css/style.min.css" rel="stylesheet" />
