处理多对多数据的修改和删除

--- a/QrF.Sqlite.Nancy/Views/Sys/user.html
+++ b/QrF.Sqlite.Nancy/Views/Sys/user.html
@@ -113,7 +113,7 @@
                                         <button class="btn cyan waves-effect waves-light left query_btn" type="button" name="action">
                                             <i class="mdi-action-search"></i> 查询
                                         </button>
-                                        <a class="btn teal waves-effect waves-light right modal-trigger" href="#modalEdit">
+                                        <a class="btn teal waves-effect waves-light right edit_btn" href="/sys/userGet?id=-1">
                                             <i class="mdi-content-add"></i> 新增
                                         </a>
                                     </div>
@@ -193,7 +193,7 @@
     <script src="../../content/js/lib/sea.js"></script>
     <script src="../../content/js/common.js"></script>
     <script>
-        var menu = seajs.use('js/app/user.js');
+        seajs.use('js/app/user.js');
     </script>
 </body>
 </html>
