--- a/_Lib/Views/Customer/info.html
+++ b/_Lib/Views/Customer/info.html
@@ -135,7 +135,7 @@
                                                         <div class="row">
                                                             <div class="input-field col s6">
                                                                 <label for="BuyTime">购买日期 *</label>
-                                                                <input id="BuyTime" name="BuyTime" type="text" data-error=".errorTxt1">
+                                                                <input id="BuyTime" name="BuyTime" type="date" data-error=".errorTxt1" class="datepicker">
                                                                 <div class="errorTxt1"></div>
                                                             </div>
                                                             <div class="input-field col s6">
@@ -176,11 +176,11 @@
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="CarrayDate">起息日期</label>
-                                                                <input id="CarrayDate" name="CarrayDate" type="text">
+                                                                <input id="CarrayDate" name="CarrayDate" type="date" class="datepicker">
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="DueDate">到期日期</label>
-                                                                <input id="DueDate" name="DueDate" type="text">
+                                                                <input id="DueDate" name="DueDate" type="date" class="datepicker">
                                                             </div>
                                                             <div class="input-field col s6">
                                                                 <label for="Remark">备注说明</label>
