调试日期控件

--- a/QrF.Sqlite.Nancy/Views/Customer/info.html
+++ b/QrF.Sqlite.Nancy/Views/Customer/info.html
@@ -107,9 +107,13 @@
                                 <div class="row">
                                     <div class="input-field col s3">
                                         <input name="Name" type="text" class="validate">
-                                        <label for="icon_prefix3" class="">客户名称</label>
+                                        <label for="Name" class="">客户名称</label>
                                     </div>
-                                    <div class="input-field col s9">
+                                    <div class="input-field col s3">
+                                        <label for="BuyTime">购买日期</label>
+                                        <input id="QueryDate" name="QueryDate" type="text" class="datepicker">
+                                    </div>
+                                    <div class="input-field col s6">
                                         <button class="btn cyan waves-effect waves-light left query_btn" type="button" name="action">
                                             <i class="mdi-action-search"></i> 查询
                                         </button>
