--- a/_Lib/Views/Sys/menu.html
+++ b/_Lib/Views/Sys/menu.html
@@ -161,7 +161,7 @@
                                                             <div class="col s6 l4">
                                                                 <label for="ParentId">父级菜单</label>
                                                                 <select id="ParentId" name="ParentId">
-                                                                    <option disabled selected>所有菜单</option>
+                                                                    <option value="1" selected>所有菜单</option>
                                                                 </select>
                                                             </div>
                                                             <div class="input-field col s6 l4">
